# ik_kinematics

./: package.xml  setup.cfg  setup.py
launch/: launch_algebraic.py  launch_geometric.py  launch_gradient.py  launch_ik.py  launch_ik_gradiente.py  launch_mth.py  launch_newton.py  launch_pata.py  launch_unificada.py
meshes/: base_link.STL  efector.STL  link_c.STL  link_p.STL  link_r.STL
parcial2/: gui_algebraic.py  gui_geometric.py  gui_gradient.py  gui_mth.py  gui_newton.py  gui_pata.py  gui_unificada.py
urdf/: LA_PATA_SOLA.urdf  la_pata_sola.urdf
